@@ -1152,8 +1152,8 @@
 	    hexpandable="true" vexpandable="true" base-type="Gtk.Container">
 	<itemgroups>
 	    <itemgroup label="Scrolled Window Properties">
-		<property name="VscrollbarPolicy" ignore-default="true" />
-		<property name="HscrollbarPolicy" ignore-default="true" />
+		<property name="VscrollbarPolicy" default="Automatic" />
+		<property name="HscrollbarPolicy" default="Automatic" />
 		<property name="ShadowType" />
 		<property name="WindowPlacement" />
 		<property name="BorderWidth" />
